@@ -2,6 +2,9 @@ This file contain the log of changes for the main development branch (trunk).
 More detailed information about incremental changes can be found in the
 history management of subversion.
 
+2017-xx-yy releases/3.12.8
+        - add define for FORTRAN_INTEGER_TYPE to config_ipopt_default.h
+
 2017-02-25 releases/3.12.7
         - removed compiler flag -pedantic-errors to avoid problems with some
           configure tests when using recent GCC versions
